--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goit-js-hw-09",
   "version": "2.0.0",
-  "description": "",
+  "description": "**Read in other languages: [Русский](README.md), [Polski](README.pl.md).**",
   "homepage": "https://santr1901.github.io/goit-js-hw-09",
   "scripts": {
     "start": "parcel src/*.html",
@@ -18,6 +18,7 @@
     "url": "https://santr1901.github.io/goit-js-hw-09/issues"
   },
   "dependencies": {
+    "flatpickr": "^4.6.13",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
@@ -26,5 +27,6 @@
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "main": "index.js"
 }
